fixed contrast issue

--- a/ProBio.css
+++ b/ProBio.css
@@ -89,6 +89,7 @@
 
 .git {
   text-align: center;
+  color: var(--black);
 }
 
 .contact {
